tests/gcc-torture/breakdown/success/920711-1.c
#include "cerberus.h"
/* { dg-options "-fwrapv" } */


int f(long a){return (--a > 0);}
int 
main (void){if(f(0x80000000L)==0)abort();exit(0);}
